Archive2/8c/abd6c51a510237/output
kill: Operation not permitted
kill: Operation not permitted
kill: Operation not permitted
main.cpp:3:14: error: expected ‘,’ or ‘...’ before ‘iarray’
 void f(int[] iarray){
              ^
