Archive2/8c/abd6c51a510237/main.cpp
#include <iostream>

void f(int[] iarray){
    std::cout << 0;
}

int main(){
    
    return 0;
}